public class Player {

    //Field
    String name;

    //Constructor
    public Player(String name){
        this.name = name;
    }

    //Getter  method for name
    public String getName(){
        return this.name;
    }


}
